fix menu-items wrapping at 1024px breakpoint

--- a/packages/vocabulary/src/styles/footer.scss
+++ b/packages/vocabulary/src/styles/footer.scss
@@ -36,6 +36,7 @@
 					font-size: $font-size-h5;
 					font-style: normal;
 					font-weight: bold;
+					white-space: nowrap;
 				}
 			}
 		}
